@@ -25,13 +25,14 @@ public class InicioSesionFrm extends javax.swing.JFrame {
 
     private final IUsuarioFachada usuarioFachada;
     private final IInsertMasivoFachada insertFachada; 
-    
     /**
      * Creates new form FrameInicioSesion
      * @throws itson.sistemabibliotecamusicalnegocio.excepciones.NegocioException
      */
     public InicioSesionFrm() throws NegocioException {
         initComponents();
+        this.setLocationRelativeTo(null);
+
         this.usuarioFachada = new UsuarioFachada();
         this.insertFachada = new InsertMasivoFachada();
         insertFachada.insertarDatosMasivos();
@@ -266,14 +267,16 @@ public class InicioSesionFrm extends javax.swing.JFrame {
         });
     }
 
-    private void validarCampos() throws NegocioException{
-        if(txtUsuario.getText().trim().isEmpty()
-                || txtUsuario.getText().trim().isBlank())
+    private void validarCampos() throws NegocioException {
+        if (txtUsuario.getText().trim().isEmpty()
+                || txtUsuario.getText().trim().isBlank()) {
             throw new NegocioException("Ingrese el usuario.");
-        if(passwordContraseña.getPassword().length<1)
+        }
+        if (passwordContraseña.getPassword().length < 1) {
             throw new NegocioException("Ingrese la contraseña.");
+        }
     }
-    
+
     // Variables declaration - do not modify//GEN-BEGIN:variables
     private javax.swing.JButton btnIniciarSesion;
     private javax.swing.JButton btnRegistrarse;
